:memo: update inception year

--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -11,7 +11,7 @@
 		<name>Fachgruppe Informatik WHZ</name>
 		<url>https://www.fh-zwickau.de/pti/organisation/fachgruppe-informatik/homepage-der-fg-informatik/</url>
 	</organization>
-	<inceptionYear>2020</inceptionYear>
+	<inceptionYear>2020-2021</inceptionYear>
 
 	<licenses>
 		<license>
