--- a/commentTone/pom.xml
+++ b/commentTone/pom.xml
@@ -36,7 +36,7 @@
         <rabbitmq.version>5.10.0</rabbitmq.version>
         <gson.version>2.8.2</gson.version>
 
-        <sl4j.version>1.7.30</sl4j.version>
+        <slf4j.version>1.7.30</slf4j.version>
     </properties>
 
     <dependencies>
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${sl4j.version}</version>
+            <version>${slf4j.version}</version>
         </dependency>
 
     </dependencies>
