Testing with RabbitMQ (#42)
* :truck: move feedback data test

* :heavy_plus_sign: add test dependencies

* :sparkles: add environment variable util

* :recycle: refactor publisher

* :white_check_mark: add/update tests with rabbitmq

* :white_check_mark: using status in resource test

* :green_heart: execute spotless apply

* :recycle: refactor subscriber

* :green_heart: execute spotless apply

* :recycle: create application json constant

* :green_heart: execute spotless apply

* :white_check_mark: add testinstance for it

* :fire: remove unnecessary lines in it

* :green_heart: execute spotless apply

* using vlingo logger

* update license header

* :white_check_mark: refactor rabbitmq test to integration test

--- a/feedback/pom.xml
+++ b/feedback/pom.xml
@@ -45,6 +45,8 @@
         <junit.version>5.6.0</junit.version>
         <mockito.version>3.5.15</mockito.version>
         <restassured.version>4.3.1</restassured.version>
+        <awaitility.version>3.0.0</awaitility.version>
+        <assertj.version>3.18.1</assertj.version>
     </properties>
 
     <repositories>
@@ -118,6 +120,19 @@
             <version>${restassured.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <profiles>
