Account-Connection Implementierung (#47)
* fixed a lot of bugs, changed DTO received from rabbitmq, creating account now creates a portfolio via http request, implemented MoneyInvested Event

* added javadoc, minor refactoring

* applied spotless and license header formatting

* adjusted and extended Readme, minor adjustments

* implemented CommentTone rabbitmq connection, implemented CommentToneData and SentimentReceived Event and all necessary steps to make everything work, adjusted Readme

* implemented CommentTone rabbitmq connection, CommentToneData and SentimentReceived event and all necessary steps to make everything work, adjusted Readme, applied spotless and license

* adjusted CommentToneData so the pub sub pair uses the exact same DTO object

* added optional to env var, adjusted readme, implemented AccountCalculator, implemented proper calculation system for balance, a lot of refactoring

* refactoring

* refactoring 2.0, adjusted readme

* adjusted readme

* fixed link in readme

Co-authored-by: Lation <timon_schwalbe@web.de>

--- a/account/pom.xml
+++ b/account/pom.xml
@@ -10,7 +10,7 @@
         <name>Fachgruppe Informatik WHZ</name>
         <url>https://www.fh-zwickau.de/pti/organisation/fachgruppe-informatik/homepage-der-fg-informatik/</url>
     </organization>
-    <inceptionYear>2020</inceptionYear>
+    <inceptionYear>2020-2021</inceptionYear>
 
     <licenses>
         <license>
@@ -255,8 +255,7 @@
                         <header>com/mycila/maven/plugin/license/templates/MPL-2.txt</header>
                         <properties>
                             <owner>${project.organization.name}</owner>
-                            <email>lationts@gmail.com</email>
-                            <license.years>2020</license.years>
+                            <email>help.flaxel@gmail.com</email>
                         </properties>
                         <includes>
                             <include>src/*/java/**/*.java</include>
