Remove default exchange durability

--- a/docker-compose.stocktrader.yml
+++ b/docker-compose.stocktrader.yml
@@ -7,7 +7,7 @@ services:
     environment:
       RABBITMQ_SERVICE: "rabbitmq"
       RABBITMQ_EXCHANGE: "stocks"
-      DURABLE_EXCHANGE: "true"
+      DURABLE_EXCHANGE: "false"
       PUBLISH_INTERVAL: 5
 #      RANDOM_PUBLISH_INTERVAL: 15
 #      STOCK_SYMBOLS: "TSLA,INTC,GOOG,MSFT,AMZN,NVDA,NFLX,SBUX,SAP,ADDYY,POAHF,SAP.DE"
