--- a/docker-compose.stocktrader.yml
+++ b/docker-compose.stocktrader.yml
@@ -21,3 +21,13 @@ services:
       RABBITMQ_SERVICE: "rabbitmq"
     ports:
       - 18080:18080
+  comment-tone:
+    build: ./commentTone/
+    restart: always
+    depends_on:
+      - rabbitmq
+    environment:
+      RABBITMQ_SERVICE: "rabbitmq"
+      RABBITMQ_PUBLISH_EXCHANGE: "commentTone"
+      RABBITMQ_CONSUME_EXCHANGE: "feedback"
+      RABBITMQ_EXCHANGE_TYPE: "fanout"
