--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -35,6 +35,7 @@
 		<maven-shade-plugin.version>3.1.0</maven-shade-plugin.version>
 		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
 		<maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
+		<maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
 
 		<vlingo.version>1.4.1-SNAPSHOT</vlingo.version>
 		<rabbitmq.version>5.10.0</rabbitmq.version>
@@ -122,6 +123,14 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar-plugin.version}</version>
+				<configuration>
+					<finalName>portfolio</finalName>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>com.mycila</groupId>
 				<artifactId>license-maven-plugin</artifactId>
