Separate profiles and properties for account project

--- a/account/src/main/resources/vlingo-xoom.properties
+++ b/account/src/main/resources/vlingo-xoom.properties
@@ -1,10 +1,7 @@
-docker.image=account-app
-docker.repository=xoom-application
-
 database=POSTGRES
 database.name=vlingo_test
 database.driver=org.postgresql.Driver
-database.url=jdbc:postgresql://[::1]:5432/
+database.url=${database.url}
 database.username=vlingo_test
 database.password=vlingo123
 database.originator=Timon
@@ -12,7 +9,7 @@ database.originator=Timon
 query.database=POSTGRES
 query.database.name=vlingo_test
 query.database.driver=org.postgresql.Driver
-query.database.url=jdbc:postgresql://[::1]:5432/
+query.database.url=${query.database.url}
 query.database.username=vlingo_test
 query.database.password=vlingo123
 query.database.originator=Timon
