--- a/commentTone/pom.xml
+++ b/commentTone/pom.xml
@@ -31,6 +31,8 @@
 
         <spotless.version>2.5.0</spotless.version>
         <license.version>4.0.rc2</license.version>
+        <mainClass>com.whz.commenttone.Main</mainClass>
+        <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
 
         <rabbitmq.version>5.10.0</rabbitmq.version>
@@ -75,7 +77,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.whz.commenttone.Main</mainClass>
+                            <mainClass>${mainClass}</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -130,6 +132,22 @@
                             <phase>process-sources</phase>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>${exec-maven-plugin.version}</version>
+                    <configuration>
+                        <executable>java</executable>
+                        <arguments>
+                            <argument>-classpath</argument>
+                            <classpath/>
+                            <argument>-noverify</argument>
+                            <argument>-XX:TieredStopAtLevel=1</argument>
+                            <argument>-Dcom.sun.management.jmxremote</argument>
+                            <argument>${mainClass}</argument>
+                        </arguments>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
