Add parameters for Dockerfiles

--- a/account/Dockerfile
+++ b/account/Dockerfile
@@ -9,4 +9,4 @@ COPY --from=build /home/app/target/account.jar account.jar
 COPY --from=build /home/app/wait-for-it.sh wait-for-it.sh
 EXPOSE 18081
 RUN apk add --no-cache bash && chmod 755 wait-for-it.sh
-CMD ./wait-for-it.sh rabbitmq:5672 -t 20 -- java -jar account.jar
+CMD ./wait-for-it.sh rabbitmq:5672 -t 20 -- java -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar account.jar
