--- a/stock-quote/Dockerfile
+++ b/stock-quote/Dockerfile
@@ -8,4 +8,4 @@ FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
 COPY --from=build /home/app/target/stock-quote-*-jar-with-dependencies.jar stock-quote.jar
 COPY --from=build /home/app/wait-for-it.sh wait-for-it.sh
 RUN apk add --no-cache bash && chmod 755 wait-for-it.sh
-CMD ./wait-for-it.sh rabbitmq:5672 -t 20 -- java -jar stock-quote.jar
+CMD ./wait-for-it.sh rabbitmq:5672 -t 20 -- java -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar stock-quote.jar
